# InsightWeaver

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  TESTING.md  briefing.py  create_forecast_tables.py  main.py  monitor_quality.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_collectors.py  test_output.txt  test_semantic_memory.py  test_suite.py
.github/workflows/: ci.yml  daily-briefing.yml
config/: api_sources.json  user_profile.example.json
config/context_modules/: README.md
config/feeds/: core.json
data/forecasts/: forecast_2_20251230_231004.html  forecast_3_20251230_234020.html  forecast_4_20251231_001114.html  forecast_5_20251231_001918.html
data/newsletters/: daily_brief_2025-09-17.html  daily_brief_2025-09-23.html  daily_brief_2025-09-24.html  daily_brief_2025-09-30.html  weekly_analysis_2025-09-17_to_2025-09-24.html  weekly_analysis_2025-09-23_to_2025-09-30.html
deployment/: SCHEDULING_SETUP.md  install_scheduler.sh
deployment/systemd/: insightweaver-daily.service  insightweaver-daily.timer
docs/: DEEP_CONTEXT_IMPLEMENTATION_PLAN.md  civic_engagement_implementation.md  collectors.md  configuration_guide.md  context_enhancement_summary.md  enhanced_data_collection.md  potential_sources.md  project_status.md  system_description.md
migrations/: 001_add_content_filtering.sql  001_optimize_for_context_engineering.py  002_add_narrative_synthesis.sql  002_cleanup_deprecated_fields.py  README.md
scripts/: scheduled_report.py  test_collectors.py  test_semantic_memory.py
src/: __init__.py  __main__.py  feed_manager.py
src/agents/: __init__.py  base_agent.py  claude_client.py  narrative_synthesis_agent.py  prioritization_agent.py  trend_agent.py
src/analyzers/: sentiment_analyzer.py  trend_analyzer.py
src/cli/: __init__.py  app.py  ascii_art.py  brief.py  brief_formatter.py  brief_verifier.py  colors.py  forecast.py  forecast_verifier.py  frames.py  html_report.py  loading.py  output.py  prioritize.py  query_priorities.py  run_pipeline.py  trust.py
src/collectors/: __init__.py  base_collector.py  event_monitor.py  fairfax_calendar.py  job_market.py  manager.py  vulncheck_kev.py
src/config/: feed_matcher.py  feeds.py  settings.py
src/context/: __init__.py  anomaly_detector.py  claude_client.py  curator.py  examples.py  frame_manager.py  module_loader.py  perception.py  perspectives.py  reflection_engine.py  semantic_memory.py  synthesizer.py  topic_matcher.py
src/database/: connection.py  models.py
src/forecast/: __init__.py  context_curator.py  engine.py  executive_formatter.py  formatter.py  orchestrator.py  scenario_modeler.py
src/maintenance/: __init__.py  apply_indexes.py  data_retention.py
src/monitoring/: __init__.py  health_monitor.py
src/newsletter/: __init__.py  content_engine.py  email_sender.py  newsletter_system.py  templates.py
src/pipeline/: __init__.py  orchestrator.py
src/processors/: content_filter.py  deduplicator.py  normalizer.py
src/prompts/: ANALYSIS_RULES.md  __init__.py  frames.py  synthesis.py
src/rss/: fetcher.py  parallel_fetcher.py
src/trust/: __init__.py  authoritative_sources.yaml  bias_analyzer.py  fact_verifier.py  intimacy_detector.py  moderate_formatter.py  source_matcher.py  trust_pipeline.py  trust_prompts.py  trust_report.py
src/utils/: base_formatter.py  error_handling.py  logging.py  profile_loader.py  profiler.py  web_tools.py
src/web/: __init__.py  server.py
tests/: __init__.py  conftest.py  run_tests.py  test_citation_standalone.py  test_citations_manual.py  test_content_filter.py  test_database_models.py  test_newsletter_system.py  test_newsletter_templates.py  test_phase2_checkpoint.py  test_prioritization_agent.py  test_profile_loader.py  test_trend_agent.py  test_trust_synthesis.py
tests/cli/: __init__.py  conftest.py  test_app.py  test_output.py  test_trust.py
tests/collectors/: __init__.py  conftest.py  test_base_collector.py
tests/config/: __init__.py  conftest.py  test_feeds.py  test_settings.py
tests/context/: __init__.py  conftest.py  test_curator.py  (+2 more)
(+90 files in other folders)
